# AI-Video-Gen

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: cli.py  config.py  main.py
backend/app/adapters/: base.py  catalog.py  comfyui.py  diffusers_video.py  ltx_native.py  mock_gen.py  planned.py  registry.py
backend/app/models/: __init__.py
backend/app/services/: jobs.py  media.py
docs/: vast-template.md  video-generation-service-tech-card.md
examples/: sample-batch.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  styles.css
scripts/: bootstrap_vast.sh  deploy_vast.sh  onstart_vast_instance.sh  run_remote_server.sh  start_vast.sh
